feat: mod fed shared libs

--- a/libs/passenger/feature-search/src/lib/search.component.html
+++ b/libs/passenger/feature-search/src/lib/search.component.html
@@ -36,6 +36,8 @@
 
   <div class="card">
 
+    <div>User: {{user}}</div>
+
     <table class="table table-condensed" *ngIf="passengers.length">
         <thead>
             <tr>
